--- a/shop419/mainapp/templates/home.html
+++ b/shop419/mainapp/templates/home.html
@@ -65,8 +65,8 @@
 
     <main>
         <div class="container-fluid">
-            <table class="table" data-bs-theme="dark" bg-dark>
-                <thead>
+            <table class="table-dark" >
+                <thead class="thead-light">
                     <th>Id</th>
                     <th>Name</th>
                     <th>Price</th>
