--- a/shop419/mainapp/templates/home.html
+++ b/shop419/mainapp/templates/home.html
@@ -1,72 +1,15 @@
-<!doctype html>
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>B419</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% block title %}
+Home
+{% endblock %}
 
-    <link rel="shortcut icon" href="{% static 'images\icons\logo-cropped.ico' %}" type="image/x-icon">
-</head>
-
-<body>
-    <header class="position-fixed top-0 start-0 end-0">
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-            <div class="container-fluid">
-
-                <a class="navbar-brand" href="#">
-                    <img src="{% static 'images\logos\logo-bgless.png' %}" alt="Logo" width="30" height="24"
-                        class="d-inline-block align-text-top">
-                    B419
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'aboutpage' %}">About</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main>
+{% block content %}
+        <!-- this is for home page -->
         <div class="container-fluid">
-            <table class="table-dark" >
-                <thead class="thead-light">
+            <table class="table" data-bs-theme="dark">
+                <thead >
                     <th>Id</th>
                     <th>Name</th>
                     <th>Price</th>
@@ -93,14 +36,6 @@
           
             </table>
         </div>
-    </main>
 
-    <footer class="position-fixed bottom-0 start-0 end-0 text-center bg-secondary-subtle">
-        &copy; 2025
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+        <!-- home page code ends -->
+{% endblock %}
