--- a/shop419/mainapp/templates/base.html
+++ b/shop419/mainapp/templates/base.html
@@ -62,6 +62,20 @@
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-info" aria-current="page" href="{% url 'signin' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info" aria-current="page" href="{% url 'signup' %}">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <form action="{% url 'logout' %}" method="post">
+                                {% csrf_token %}
+                                <button class="nav-link">Logout</button>
+                            </form>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
