--- a/shop419/mainapp/templates/base.html
+++ b/shop419/mainapp/templates/base.html
@@ -54,27 +54,41 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
+                        {% if user.is_authenticated %}
+                            {% if user.is_staff %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'add_prod' %}">Add Product</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" >My Cart</a>
+                            </li>
+                            {% endif %}
+                        
+                        {% endif %}
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-info" aria-current="page" href="{% url 'signin' %}">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-info" aria-current="page" href="{% url 'signup' %}">Register</a>
-                        </li>
+
+                    {% if user.is_authenticated %}
                         <li class="nav-item">
                             <form action="{% url 'logout' %}" method="post">
                                 {% csrf_token %}
                                 <button class="nav-link">Logout</button>
                             </form>
                         </li>
+                    {% else %}
+
+                        <li class="nav-item">
+                            <a class="nav-link text-info" aria-current="page" href="{% url 'signin' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info" aria-current="page" href="{% url 'signup' %}">Register</a>
+                        </li>
+                    {% endif %}
                     </ul>
                 </div>
             </div>
