--- a/shop419/mainapp/templates/home.html
+++ b/shop419/mainapp/templates/home.html
@@ -23,7 +23,11 @@ Home
                 {% for product in product_list %}
                     <tr>
                         <td>{{product.id}}</td>
-                        <td>{{product.name}}</td>
+                        <td>
+                            <a href="{% url 'prod_details' product.id %}">
+                            {{product.name}}
+                            </a>
+                        </td>
                         <td>{{product.price}}</td>
                         <td>{{product.pic}}</td>
                         <td><img src="{{product.pic}}" height="20px" alt=""></td>
