--- a/shop419/mainapp/templates/base.html
+++ b/shop419/mainapp/templates/base.html
@@ -67,8 +67,8 @@
                         
                         {% endif %}
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <form class="d-flex" role="search" method="get" action="{% url 'search' %}">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search_text" value="{{query}}">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                     <ul class="navbar-nav">
