--- a/shop419/mainapp/templates/base.html
+++ b/shop419/mainapp/templates/base.html
@@ -61,7 +61,7 @@
                             </li>
                             {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" >My Cart</a>
+                                <a class="nav-link" href="{% url 'view_cart' %}">My Cart</a>
                             </li>
                             {% endif %}
                         
