--- a/shop419/mainapp/templates/home.html
+++ b/shop419/mainapp/templates/home.html
@@ -33,7 +33,11 @@ Home
                         <td><img src="{{product.pic}}" height="20px" alt=""></td>
                         <td>{{product.stock}}</td>
                         <td>{{product.desc}}</td>
+                        {% if user.is_staff %}
+                        <td><a href="{% url 'del_prod' product.id %}" class="btn btn-primary">Delete Product</a></td>
+                        {% else %}
                         <td><a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary">Add to Cart</a></td>
+                        {% endif %}
                     </tr>
                 {% endfor %}
                 </tbody>
