--- a/shop419/mainapp/templates/base.html
+++ b/shop419/mainapp/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <link rel="shortcut icon" href="{% static 'images\icons\logo-cropped.ico' %}" type="image/x-icon">
+    <script src="{% static 'js/script.js' %}"></script>
 </head>
 
 <body>
